--- a/apps/alerting/notifications/definitions/alerting-notifications-manifest.yaml
+++ b/apps/alerting/notifications/definitions/alerting-notifications-manifest.yaml
@@ -11,6 +11,60 @@ spec:
     - conversion: false
       kind: Receiver
       plural: Receivers
+      routes:
+        test:
+          post:
+            operationId: createReceiverIntegrationTest
+            requestBody:
+              content:
+                application/json:
+                  schema:
+                    additionalProperties: false
+                    properties:
+                      alert:
+                        $ref: '#/components/schemas/createReceiverIntegrationTestAlert'
+                      integration:
+                        $ref: '#/components/schemas/createReceiverIntegrationTestIntegration'
+                    required:
+                    - integration
+                    - alert
+                    type: object
+              required: true
+            responses:
+              default:
+                content:
+                  application/json:
+                    schema:
+                      additionalProperties: false
+                      properties:
+                        apiVersion:
+                          description: 'APIVersion defines the versioned schema of
+                            this representation of an object. Servers should convert
+                            recognized schemas to the latest internal value, and may
+                            reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+                          type: string
+                        duration:
+                          type: string
+                        error:
+                          type: string
+                        kind:
+                          description: 'Kind is a string value representing the REST
+                            resource this object represents. Servers may infer this
+                            from the endpoint the client submits requests to. Cannot
+                            be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+                          type: string
+                        status:
+                          enum:
+                          - success
+                          - failure
+                          type: string
+                      required:
+                      - status
+                      - duration
+                      - apiVersion
+                      - kind
+                      type: object
+                description: Default OK response
       schemas:
         Integration:
           additionalProperties: false
@@ -37,43 +91,52 @@ spec:
           - version
           - settings
           type: object
-        OperatorState:
-          additionalProperties: false
-          properties:
-            descriptiveState:
-              description: descriptiveState is an optional more descriptive state
-                field which has no requirements on format
-              type: string
-            details:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: details contains any extra information that is operator-specific
-              type: object
-            lastEvaluation:
-              description: lastEvaluation is the ResourceVersion last evaluated
-              type: string
-            state:
-              description: |-
-                state describes the state of the lastEvaluation.
-                It is limited to three possible states for machine evaluation.
-              enum:
-              - success
-              - in_progress
-              - failed
-              type: string
-          required:
-          - lastEvaluation
-          - state
-          type: object
         Receiver:
           properties:
             spec:
               $ref: '#/components/schemas/spec'
-            status:
-              $ref: '#/components/schemas/status'
           required:
           - spec
+        createReceiverIntegrationTestAlert:
+          additionalProperties: false
+          properties:
+            annotations:
+              additionalProperties:
+                type: string
+              type: object
+            labels:
+              additionalProperties:
+                type: string
+              type: object
+          required:
+          - labels
+          - annotations
+          type: object
+        createReceiverIntegrationTestIntegration:
+          additionalProperties: false
+          properties:
+            disableResolveMessage:
+              type: boolean
+            secureFields:
+              additionalProperties:
+                type: boolean
+              type: object
+            settings:
+              additionalProperties:
+                additionalProperties: {}
+                type: object
+              type: object
+            type:
+              type: string
+            uid:
+              type: string
+            version:
+              type: string
+          required:
+          - type
+          - version
+          - settings
+          type: object
         spec:
           additionalProperties: false
           properties:
@@ -87,24 +150,9 @@ spec:
           - title
           - integrations
           type: object
-        status:
-          additionalProperties: false
-          properties:
-            additionalFields:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: additionalFields is reserved for future use
-              type: object
-            operatorStates:
-              additionalProperties:
-                $ref: '#/components/schemas/OperatorState'
-              description: |-
-                operatorStates is a map of operator ID to operator state evaluations.
-                Any operator which consumes this kind SHOULD add its state evaluation information to this field.
-              type: object
-          type: object
       scope: Namespaced
+      selectableFields:
+      - spec.title
     - conversion: false
       kind: RoutingTree
       plural: RoutingTrees
@@ -127,35 +175,6 @@ spec:
           - type
           - label
           - value
-          type: object
-        OperatorState:
-          additionalProperties: false
-          properties:
-            descriptiveState:
-              description: descriptiveState is an optional more descriptive state
-                field which has no requirements on format
-              type: string
-            details:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: details contains any extra information that is operator-specific
-              type: object
-            lastEvaluation:
-              description: lastEvaluation is the ResourceVersion last evaluated
-              type: string
-            state:
-              description: |-
-                state describes the state of the lastEvaluation.
-                It is limited to three possible states for machine evaluation.
-              enum:
-              - success
-              - in_progress
-              - failed
-              type: string
-          required:
-          - lastEvaluation
-          - state
           type: object
         Route:
           additionalProperties: false
@@ -215,8 +234,6 @@ spec:
           properties:
             spec:
               $ref: '#/components/schemas/spec'
-            status:
-              $ref: '#/components/schemas/status'
           required:
           - spec
         spec:
@@ -232,92 +249,36 @@ spec:
           - defaults
           - routes
           type: object
-        status:
-          additionalProperties: false
-          properties:
-            additionalFields:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: additionalFields is reserved for future use
-              type: object
-            operatorStates:
-              additionalProperties:
-                $ref: '#/components/schemas/OperatorState'
-              description: |-
-                operatorStates is a map of operator ID to operator state evaluations.
-                Any operator which consumes this kind SHOULD add its state evaluation information to this field.
-              type: object
-          type: object
       scope: Namespaced
     - conversion: false
       kind: TemplateGroup
       plural: TemplateGroups
       schemas:
-        OperatorState:
-          additionalProperties: false
-          properties:
-            descriptiveState:
-              description: descriptiveState is an optional more descriptive state
-                field which has no requirements on format
-              type: string
-            details:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: details contains any extra information that is operator-specific
-              type: object
-            lastEvaluation:
-              description: lastEvaluation is the ResourceVersion last evaluated
-              type: string
-            state:
-              description: |-
-                state describes the state of the lastEvaluation.
-                It is limited to three possible states for machine evaluation.
-              enum:
-              - success
-              - in_progress
-              - failed
-              type: string
-          required:
-          - lastEvaluation
-          - state
-          type: object
         TemplateGroup:
           properties:
             spec:
               $ref: '#/components/schemas/spec'
-            status:
-              $ref: '#/components/schemas/status'
           required:
           - spec
+        TemplateKind:
+          enum:
+          - grafana
+          - mimir
+          type: string
         spec:
           additionalProperties: false
           properties:
             content:
               type: string
+            kind:
+              $ref: '#/components/schemas/TemplateKind'
+              default: grafana
             title:
               type: string
           required:
           - title
           - content
-          type: object
-        status:
-          additionalProperties: false
-          properties:
-            additionalFields:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: additionalFields is reserved for future use
-              type: object
-            operatorStates:
-              additionalProperties:
-                $ref: '#/components/schemas/OperatorState'
-              description: |-
-                operatorStates is a map of operator ID to operator state evaluations.
-                Any operator which consumes this kind SHOULD add its state evaluation information to this field.
-              type: object
+          - kind
           type: object
       scope: Namespaced
     - conversion: false
@@ -350,41 +311,10 @@ spec:
                 type: string
               type: array
           type: object
-        OperatorState:
-          additionalProperties: false
-          properties:
-            descriptiveState:
-              description: descriptiveState is an optional more descriptive state
-                field which has no requirements on format
-              type: string
-            details:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: details contains any extra information that is operator-specific
-              type: object
-            lastEvaluation:
-              description: lastEvaluation is the ResourceVersion last evaluated
-              type: string
-            state:
-              description: |-
-                state describes the state of the lastEvaluation.
-                It is limited to three possible states for machine evaluation.
-              enum:
-              - success
-              - in_progress
-              - failed
-              type: string
-          required:
-          - lastEvaluation
-          - state
-          type: object
         TimeInterval:
           properties:
             spec:
               $ref: '#/components/schemas/spec'
-            status:
-              $ref: '#/components/schemas/status'
           required:
           - spec
         TimeRange:
@@ -411,22 +341,140 @@ spec:
           - name
           - time_intervals
           type: object
-        status:
+      scope: Namespaced
+    - conversion: false
+      kind: ReceiverSchema
+      plural: ReceiverSchemas
+      schemas:
+        Field:
           additionalProperties: false
           properties:
-            additionalFields:
-              additionalProperties:
-                additionalProperties: {}
-                type: object
-              description: additionalFields is reserved for future use
-              type: object
-            operatorStates:
-              additionalProperties:
-                $ref: '#/components/schemas/OperatorState'
-              description: |-
-                operatorStates is a map of operator ID to operator state evaluations.
-                Any operator which consumes this kind SHOULD add its state evaluation information to this field.
-              type: object
+            dependsOn:
+              type: string
+            description:
+              type: string
+            element:
+              type: string
+            inputType:
+              type: string
+            label:
+              type: string
+            placeholder:
+              type: string
+            propertyName:
+              type: string
+            protected:
+              type: boolean
+            required:
+              type: boolean
+            secure:
+              type: boolean
+            selectOptions:
+              items:
+                $ref: '#/components/schemas/SelectOption'
+              type: array
+            showWhen:
+              $ref: '#/components/schemas/ShowWhen'
+            subformOptions:
+              items:
+                $ref: '#/components/schemas/Field'
+              type: array
+            validationRule:
+              type: string
+          required:
+          - element
+          - inputType
+          - label
+          - description
+          - placeholder
+          - propertyName
+          - showWhen
+          - required
+          - validationRule
+          - secure
+          - dependsOn
+          type: object
+        IntegrationSchemaVersion:
+          additionalProperties: false
+          properties:
+            canCreate:
+              type: boolean
+            deprecated:
+              type: boolean
+            info:
+              type: string
+            options:
+              items:
+                $ref: '#/components/schemas/Field'
+              type: array
+            typeAlias:
+              type: string
+            version:
+              type: string
+          required:
+          - version
+          - canCreate
+          - options
+          type: object
+        ReceiverSchema:
+          properties:
+            spec:
+              $ref: '#/components/schemas/spec'
+          required:
+          - spec
+        SelectOption:
+          additionalProperties: false
+          properties:
+            description:
+              type: string
+            label:
+              type: string
+            value:
+              oneOf:
+              - type: string
+              - type: number
+          required:
+          - label
+          - value
+          - description
+          type: object
+        ShowWhen:
+          additionalProperties: false
+          properties:
+            field:
+              type: string
+            is:
+              type: string
+          required:
+          - field
+          - is
+          type: object
+        spec:
+          additionalProperties: false
+          properties:
+            currentVersion:
+              type: string
+            deprecated:
+              type: boolean
+            description:
+              type: string
+            heading:
+              type: string
+            info:
+              type: string
+            name:
+              type: string
+            type:
+              type: string
+            versions:
+              items:
+                $ref: '#/components/schemas/IntegrationSchemaVersion'
+              type: array
+          required:
+          - type
+          - currentVersion
+          - name
+          - versions
           type: object
       scope: Namespaced
     name: v0alpha1
