--- a/devenv/frontend-service/docker-compose.yaml
+++ b/devenv/frontend-service/docker-compose.yaml
@@ -78,6 +78,9 @@ services:
       OTEL_SERVICE_NAME: frontend-service
       GF_TRACING_OPENTELEMETRY_OTLP_ADDRESS: 'alloy:4317'
       GF_TRACING_OPENTELEMETRY_OTLP_PROPAGATION: jaeger,w3c
+      # Faro (Grafana JavaScript Agent) configuration - sends frontend observability data to Loki via Alloy
+      GF_LOG_FRONTEND_ENABLED: true
+      GF_LOG_FRONTEND_CUSTOM_ENDPOINT: http://localhost:12347/collect
 
   postgres:
     image: postgres:16.1-alpine3.19@sha256:17eb369d9330fe7fbdb2f705418c18823d66322584c77c2b43cc0e1851d01de7
@@ -98,6 +101,7 @@ services:
       - alloy-data:/var/lib/alloy/data
     ports:
       - '12346:12345' # Alloy UI
+      - '12347:12347' # Faro receiver
     command:
       - run
       - --server.http.listen-addr=0.0.0.0:12345
