--- a/public/app/plugins/datasource/parca/package.json
+++ b/public/app/plugins/datasource/parca/package.json
@@ -18,6 +18,7 @@
     "tslib": "2.8.1"
   },
   "devDependencies": {
+    "@grafana/e2e-selectors": "12.4.0-pre",
     "@grafana/plugin-configs": "12.4.0-pre",
     "@testing-library/dom": "10.4.1",
     "@testing-library/react": "16.3.0",
